fixed z-index for login bar

--- a/apparelrow/sass/src/partials/_application.sass
+++ b/apparelrow/sass/src/partials/_application.sass
@@ -122,7 +122,7 @@ button
     position: relative
     width: 100%
     background-color: #f6f6f6
-    z-index: 999998
+    z-index: 9997
     border-bottom: 1px solid $easiest_color
     #sticky-inner-login-bar
       overflow: hidden
